--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Vous êtes un patient</h2>
-                    <p class="lead">Vous voulez donner votre avis sur une intervention. Vous rechercher un spécialiste pour une intervention prêt de chez vous.</p>
+                    <p class="lead">Vous voulez donner votre avis sur une intervention. Vous recherchez un spécialiste pour une intervention près de chez vous.</p>
                     <br/><a href="https://goo.gl/forms/tCw4VlP7d9Hosai23" class="btn btn-default btn-lg"><i class="fa fa-question fa-fw"></i> <span class="network-name">Répondez à notre questionnaire</span></a>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
@@ -153,7 +153,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Vous un hôpital</h2>
-                    <p class="lead">Vous voulez rendre visible les investissements que vous avez fait. Vous voulez bénéficier rapidement de la notoriété du spécialiste que vous venez d'engager.</p>
+                    <p class="lead">Vous voulez rendre visible les investissements que vous avez fait dans votre établissement. Vous voulez bénéficier rapidement de la notoriété du spécialiste que vous venez d'engager.</p>
                     <br/><a href="https://goo.gl/forms/axnvQOTCwHzbiBNA2" class="btn btn-default btn-lg"><i class="fa fa-question fa-fw"></i> <span class="network-name">Répondez à notre questionnaire</span></a>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
