Add picture and a bit more text

--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Qui êtes vous ?</h1>
-                        <h3>lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce suscipit, tortor sed eleifend, nibh lacus mattis massa, id ullamcorper erat libero in est. Donec dapibus dolor sed interdum gravida.</h3>
+                        <h1>Rendre l'hôpital plus ouvert</h1>
+                        <h3>Le monde de l'hôpital est fermé. Il est difficile pour un patient de pouvoir échanger avec tous les spécialistes qu'il peut rencontrer dans sa vie de malade.</h3>
+                        <p class="lead">Mais cela est tout aussi difficile pour un praticien ayant une expérience solide de pouvoir se déplacer dans des contrées moins réputées, sa notoriété n'étant pas valorisée par les différents dossiers de classement des hôpitaux des magazines.</p>
+                        <p class="lead">Nous allons engager la mise en oeuvre d'une application qui aura pour but de vous aider, la profession et les patients, à mieux communiquer. Nous sommes actuellement en phase d'étude et tout information relative à vos difficultés sont intéressantes pour nous de comprendre. Nous vous invitons à répondre au questionnaire correspondant à votre profil ci-dessous.</p>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
@@ -109,7 +111,7 @@
 
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/ipad.png" alt="">
+                    <img class="img-responsive" src="img/doctor.png" alt="">
                 </div>
             </div>
 
@@ -133,7 +135,7 @@
                     <br/><a href="https://goo.gl/forms/tCw4VlP7d9Hosai23" class="btn btn-default btn-lg"><i class="fa fa-question fa-fw"></i> <span class="network-name">Répondez à notre questionnaire</span></a>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/dog.png" alt="">
+                    <img class="img-responsive" src="img/patient.png" alt="">
                 </div>
             </div>
 
@@ -152,12 +154,12 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Vous un hôpital</h2>
+                    <h2 class="section-heading">Vous représentez un hôpital</h2>
                     <p class="lead">Vous voulez rendre visible les investissements que vous avez fait dans votre établissement. Vous voulez bénéficier rapidement de la notoriété du spécialiste que vous venez d'engager.</p>
                     <br/><a href="https://goo.gl/forms/axnvQOTCwHzbiBNA2" class="btn btn-default btn-lg"><i class="fa fa-question fa-fw"></i> <span class="network-name">Répondez à notre questionnaire</span></a>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/phones.png" alt="">
+                    <img class="img-responsive" src="img/hospital.png" alt="">
                 </div>
             </div>
 
@@ -177,10 +179,12 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Qui sommes nous ?</h2>
-                    <p class="lead">lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce suscipit, tortor sed eleifend, nibh lacus mattis massa, id ullamcorper erat libero in est. Donec dapibus dolor sed interdum gravida.</p>
+                    <p class="lead">Petru Bucur, chirurgien émérite spécialiste en chirurgie digestive et tranplantation à l'hôpital de Tours connait bien le monde de la santé et les problématiques s'y rapportant. A l'origine de la mise en oeuvre de cette nouvelle idée du partage des informations au sein... blah blah blah</p>
+                    <p class="lead">Thomas Roger, architecte informatique investit sur la mise en oeuvre de système cloud avec les niveaux de sécurité afférents, blah blah</p>
+                    <p class="lead">Benjamin Jalon, architecte informatique qui a participé à la mise en oeuvre d'applications dans le monde de l'entreprise et blah blah</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/phones.png" alt="">
+                    <img class="img-responsive" src="img/about-us2.png" alt="">
                 </div>
             </div>
 
