--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <h1>Rendre l'hôpital plus ouvert</h1>
                         <h3>Le monde de l'hôpital est fermé. Il est difficile pour un patient de pouvoir échanger avec tous les spécialistes qu'il peut rencontrer dans sa vie de malade.</h3>
                         <p class="lead">Mais cela est tout aussi difficile pour un praticien ayant une expérience solide de pouvoir se déplacer dans des contrées moins réputées, sa notoriété n'étant pas valorisée par les différents dossiers de classement des hôpitaux des magazines.</p>
-                        <p class="lead">Nous allons engager la mise en oeuvre d'une application qui aura pour but de vous aider, la profession et les patients, à mieux communiquer. Nous sommes actuellement en phase d'étude et tout information relative à vos difficultés sont intéressantes pour nous de comprendre. Nous vous invitons à répondre au questionnaire correspondant à votre profil ci-dessous.</p>
+                        <p class="lead">Nous allons engager la mise en oeuvre d'une application qui aura pour but d'aider les professionnel de la santé et les patients à mieux communiquer. Nous sommes actuellement en phase d'étude et tout information relative à vos difficultés ou vos idées seront intéressantes dans notre réalisation. Nous vous invitons à répondre au questionnaire correspondant à votre profil ci-dessous.</p>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
