Improve a bit (icons, text explicitly as TODO, favicon)

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="author" content="">
 
     <title>Trouver son Spécialiste</title>
+    <link rel="icon" type="image/png" href="img/logo.png" />
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="#">Specialiste</a>
+                <img class="img-responsive" src="img/logo.png" alt="">
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -178,14 +179,34 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Qui sommes nous ?</h2>
-                    <p class="lead">Petru Bucur, chirurgien émérite spécialiste en chirurgie digestive et tranplantation à l'hôpital de Tours connait bien le monde de la santé et les problématiques s'y rapportant. A l'origine de la mise en oeuvre de cette nouvelle idée du partage des informations au sein... blah blah blah</p>
-                    <p class="lead">Thomas Roger, architecte informatique investit sur la mise en oeuvre de système cloud avec les niveaux de sécurité afférents, blah blah</p>
-                    <p class="lead">Benjamin Jalon, architecte informatique qui a participé à la mise en oeuvre d'applications dans le monde de l'entreprise et blah blah</p>
+                    <h2 class="section-heading">Qui sommes nousa ?</h2>
                 </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/about-us2.png" alt="">
+            </div>
+            <div class="row">
+                <div class="col-lg-5 col-sm-12">
+                    <p class="lead">Petru Bucur, chirurgien émérite spécialiste en chirurgie digestive et tranplantation à l'hôpital de Tours connait bien le monde de la santé et les problématiques s'y rapportant. A l'origine de la mise en oeuvre de cette nouvelle idée du partage des informations au sein... TODO</p>
                 </div>
+                <div class="col-lg-5 col-sm-12">
+                    <img class="img-responsive" src="img/Petru.jpg" alt="">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-5 col-sm-12">
+                    <p class="lead">Benjamin Jalon, architecte informatique qui a participé à la mise en oeuvre d'applications dans le monde de l'entreprise et TODO</p>
+                </div>
+                <div class="col-lg-5 col-sm-12">
+                    <img class="img-responsive" src="img/Benjamin.jpg" alt="">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-5 col-sm-12">
+                    <p class="lead">Thomas R., architecte informatique investit sur la mise en oeuvre de système cloud avec les niveaux de sécurité afférents, TODO</p>
+                </div>
+                <div class="col-lg-5 col-sm-12">
+                    <img class="img-responsive" src="img/Thomas.jpg" alt="">
+                </div>
+            </div>
+            <div class="row">
             </div>
 
         </div>
