Improve picture display

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/doctor.png" alt="">
+                    <img class="img-responsive" src="img/question_doctor.png" alt="">
                 </div>
             </div>
 
@@ -136,7 +136,7 @@
                     <br/><a href="https://goo.gl/forms/tCw4VlP7d9Hosai23" class="btn btn-default btn-lg"><i class="fa fa-question fa-fw"></i> <span class="network-name">Répondez à notre questionnaire</span></a>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/patient.png" alt="">
+                    <img class="img-responsive" src="img/question_patient.png" alt="">
                 </div>
             </div>
 
@@ -160,7 +160,7 @@
                     <br/><a href="https://goo.gl/forms/axnvQOTCwHzbiBNA2" class="btn btn-default btn-lg"><i class="fa fa-question fa-fw"></i> <span class="network-name">Répondez à notre questionnaire</span></a>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/hospital.png" alt="">
+                    <img class="img-responsive" src="img/question_hospital.png" alt="">
                 </div>
             </div>
 
@@ -179,31 +179,33 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Qui sommes nousa ?</h2>
+                    <h2 class="section-heading">Qui sommes nous ?</h2>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-5 col-sm-12">
+                <div class="col-lg-10 col-sm-5">
                     <p class="lead">Petru Bucur, chirurgien émérite spécialiste en chirurgie digestive et tranplantation à l'hôpital de Tours connait bien le monde de la santé et les problématiques s'y rapportant. A l'origine de la mise en oeuvre de cette nouvelle idée du partage des informations au sein... TODO</p>
                 </div>
-                <div class="col-lg-5 col-sm-12">
-                    <img class="img-responsive" src="img/Petru.jpg" alt="">
+                <div class="col-lg-2 col-sm-2">
+                    <img class="img-responsive" src="img/us_Petru.jpg" alt="">
                 </div>
             </div>
+            <div class="content-section-a">
             <div class="row">
-                <div class="col-lg-5 col-sm-12">
+                <div class="col-lg-10 col-sm-5">
                     <p class="lead">Benjamin Jalon, architecte informatique qui a participé à la mise en oeuvre d'applications dans le monde de l'entreprise et TODO</p>
                 </div>
-                <div class="col-lg-5 col-sm-12">
-                    <img class="img-responsive" src="img/Benjamin.jpg" alt="">
+                <div class="col-lg-2 col-sm-2">
+                    <img class="img-responsive" src="img/us_Benjamin.jpg" alt="">
                 </div>
             </div>
+                <div class="content-section-a">
             <div class="row">
-                <div class="col-lg-5 col-sm-12">
+                <div class="col-lg-10 col-sm-5">
                     <p class="lead">Thomas R., architecte informatique investit sur la mise en oeuvre de système cloud avec les niveaux de sécurité afférents, TODO</p>
                 </div>
-                <div class="col-lg-5 col-sm-12">
-                    <img class="img-responsive" src="img/Thomas.jpg" alt="">
+                <div class="col-lg-2 col-sm-2">
+                    <img class="img-responsive" src="img/us_Thomas.jpg" alt="">
                 </div>
             </div>
             <div class="row">
