Add link on logo + Change about us picture order + Improve Thomas icon

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <img class="img-responsive" src="img/logo.png" alt="">
+                <a href="#"><img class="img-responsive" src="img/logo.png" alt=""></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -183,29 +183,29 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-10 col-sm-5">
-                    <p class="lead">Petru Bucur, chirurgien émérite spécialiste en chirurgie digestive et tranplantation à l'hôpital de Tours connait bien le monde de la santé et les problématiques s'y rapportant. A l'origine de la mise en oeuvre de cette nouvelle idée du partage des informations au sein... TODO</p>
-                </div>
                 <div class="col-lg-2 col-sm-2">
                     <img class="img-responsive" src="img/us_Petru.jpg" alt="">
+                </div>
+                <div class="col-lg-10 col-sm-5">
+                    <p class="lead">Petru Bucur, chirurgien émérite spécialiste en chirurgie digestive et tranplantation à l'hôpital de Tours connait bien le monde de la santé et les problématiques s'y rapportant. A l'origine de la mise en oeuvre de cette nouvelle idée du partage des informations au sein... TODO</p>
                 </div>
             </div>
             <div class="content-section-a">
             <div class="row">
-                <div class="col-lg-10 col-sm-5">
-                    <p class="lead">Benjamin Jalon, architecte informatique qui a participé à la mise en oeuvre d'applications dans le monde de l'entreprise et TODO</p>
-                </div>
                 <div class="col-lg-2 col-sm-2">
                     <img class="img-responsive" src="img/us_Benjamin.jpg" alt="">
+                </div>
+                <div class="col-lg-10 col-sm-5">
+                    <p class="lead">Benjamin Jalon, architecte informatique qui a participé à la mise en oeuvre d'applications dans le monde de l'entreprise et TODO</p>
                 </div>
             </div>
                 <div class="content-section-a">
             <div class="row">
+                <div class="col-lg-2 col-sm-2">
+                    <img class="img-responsive" src="img/us_Thomas.png" alt="">
+                </div>
                 <div class="col-lg-10 col-sm-5">
                     <p class="lead">Thomas R., architecte informatique investit sur la mise en oeuvre de système cloud avec les niveaux de sécurité afférents, TODO</p>
-                </div>
-                <div class="col-lg-2 col-sm-2">
-                    <img class="img-responsive" src="img/us_Thomas.jpg" alt="">
                 </div>
             </div>
             <div class="row">
