--- a/index.html
+++ b/index.html
@@ -184,31 +184,29 @@
             </div>
             <div class="row">
                 <div class="col-lg-2 col-sm-2">
-                    <img class="img-responsive" src="img/us_Petru.jpg" alt="">
+                    <img class="img-circle img-thumbnail" src="img/us_Petru.jpg" alt="">
                 </div>
                 <div class="col-lg-10 col-sm-5">
                     <p class="lead">Petru Bucur, chirurgien émérite spécialiste en chirurgie digestive et tranplantation à l'hôpital de Tours connait bien le monde de la santé et les problématiques s'y rapportant. A l'origine de la mise en oeuvre de cette nouvelle idée du partage des informations au sein... TODO</p>
                 </div>
             </div>
-            <div class="content-section-a">
+
             <div class="row">
                 <div class="col-lg-2 col-sm-2">
-                    <img class="img-responsive" src="img/us_Benjamin.jpg" alt="">
+                    <img class="img-circle img-thumbnail" src="img/us_Benjamin.jpg" alt="">
                 </div>
                 <div class="col-lg-10 col-sm-5">
                     <p class="lead">Benjamin Jalon, architecte informatique qui a participé à la mise en oeuvre d'applications dans le monde de l'entreprise et TODO</p>
                 </div>
             </div>
-                <div class="content-section-a">
+
             <div class="row">
                 <div class="col-lg-2 col-sm-2">
-                    <img class="img-responsive" src="img/us_Thomas.png" alt="">
+                    <img class="img-circle img-thumbnail" src="img/us_Thomas.png" alt="">
                 </div>
                 <div class="col-lg-10 col-sm-5">
                     <p class="lead">Thomas R., architecte informatique investit sur la mise en oeuvre de système cloud avec les niveaux de sécurité afférents, TODO</p>
                 </div>
-            </div>
-            <div class="row">
             </div>
 
         </div>
